# Doomsday-Gates

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/: release-notes-v1.0.0.md
.github/workflows/: build-desktop.yml  build-mobile.yml  deploy-pages.yml
src/: audio.js  content.js  crowd.js  main.js  meta.js
src-tauri/: Cargo.toml  Info.ios.plist  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
