[package]
name = "doomsday-gates"
version = "1.0.0"
description = "Doomsday Gates desktop game"
authors = ["SBGame contributors"]
edition = "2021"

[lib]
name = "doomsday_gates_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
